<package>
  <name>openrtm_ros_bridge</name>
  <version>1.2.2</version>
  <description>openrtm_ros_bridge package provides basic functionalities to bind
    two robotics framework: <a href = "http://openrtm.org/">OpenRTM</a> and ROS.<br />
    By using this package, you can write your ROS packages that communicate with your
    non-ROS robots that run on OpenRTM.
  		
    For communicating with the robots that run on hrpsys, you can use
    <a href = "http://wiki.ros.org/hrpsys_ros_bridge">hrpsys_ros_bridge</a> package.
  </description>
  <license>BSD</license>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isaac Isao Saito</maintainer>
  <author email="saito@jsk.t.u-tokyo.ac.jp">Manabu Saito</author>

  <url type="website">http://wiki.ros.org/openrtm_ros_bridge</url>
  <url type="repository">https://github.com/start-jsk/rtmros_common</url>
  <url type="bugtracker">https://github.com/start-jsk/rtmros_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>openrtm_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rtmbuild</build_depend>

  <run_depend>openrtm_tools</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- <test_depend>openrtm_aist</test_depend> -->
  <!-- <test_depend>openrtm_tools</test_depend> -->

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
