<package>
  <name>rosnode_rtc</name>
  <version>0.0.1</version>
  <description>rosnode_rtc

     This package gives transparency between RTM and ROS.

     rtmros-data-bridge.py is a RT-Component for dataport/topic.
     This automatically convert ROS/topic into RTM/dataport.

  </description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Manabu Saito</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosnode_rtc</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="saito@jsk.t.u-tokyo.ac.jp">Manabu Saito</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>openrtm_tools</build_depend>
  <run_depend>openrtm_tools</run_depend>

  <test_depend>rospy</test_depend>
  <test_depend>rostopic</test_depend>
  <test_depend>roscpp_tutorials</test_depend>
  <test_depend>move_base_stage_tutorial</test_depend>

  <export>

  </export>
</package>
