<package>
  <name>rtmbuild</name>
  <version>1.2.4</version>
  <description>Build scripts for OpenRTM and OpenHRP</description>
  <license>BSD</license>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isaac Isao Saito</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="saito@jsk.t.u-tokyo.ac.jp">Manabu Saito</author>

  <url type="website">http://ros.org/wiki/rtmbuild</url>
  <url type="repository">https://github.com/start-jsk/rtmros_common</url>
  <url type="bugtracker">https://github.com/start-jsk/rtmros_common/issues/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>omniorb</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>openrtm_aist</build_depend>
  <build_depend>openrtm_aist_python</build_depend>

  <run_depend>libblas-dev</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>omniorb</run_depend>
  <run_depend>pkg-config</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>openrtm_aist</run_depend>
  <run_depend>openrtm_aist_python</run_depend>

  <export/>
</package>