<?xml version="1.0"?>
<package>
  <name>rtmros_common</name>
  <version>1.2.6</version>
  <description>A package suite that provides all the capabilities for
    the ROS users to connect to the robots that run on
    <a href = "http://www.openrtm.org/openrtm/en/content/what-rt-middleware-0">RT Middleware</a>
    or RTM-based controllers.    
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isaac Isao Saito</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author>Rosen Diankov</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rtmros_common</url>
  <url type="repository">https://github.com/start-jsk/rtmros_common</url>
  <url type="bugtracker">https://github.com/start-jsk/rtmros_common/issues/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hrpsys_ros_bridge</run_depend>
  <run_depend>hrpsys_tools</run_depend>
  <run_depend>openrtm_ros_bridge</run_depend>
  <run_depend>openrtm_tools</run_depend>
  <run_depend>rosnode_rtc</run_depend>
  <run_depend>rtmbuild</run_depend>

 <export>
   <metapackage/>
 </export>
</package>